# worksection-mcp

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: hooks.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
docs/: API-EXTRACTION-SUMMARY.md  API-LIMITATIONS.md  CLIENT-CAPABILITIES.md  QUICK-REFERENCE.md  api-reference.md  api-schema.json
scripts/: validate_config.py
src/worksection_mcp/: __init__.py  __main__.py  large_response.py  logging_config.py  mcp_protocols.py  server.py
src/worksection_mcp/auth/: __init__.py  callback.py  oauth2.py  ssl_utils.py  tokens.py
src/worksection_mcp/cache/: __init__.py  file_cache.py  session_cache.py
src/worksection_mcp/client/: __init__.py  api.py  rate_limiter.py
src/worksection_mcp/config/: __init__.py  settings.py
src/worksection_mcp/resources/: __init__.py  files.py  offload.py
src/worksection_mcp/tools/: __init__.py  activity.py  analytics.py  comments.py  files.py  offload.py  projects.py  system.py  tags.py  tasks.py  timers.py  users.py
src/worksection_mcp/utils/: __init__.py  date_utils.py  response_utils.py
tests/: __init__.py  conftest.py  helpers.py  live_large_response_offload_roundtrip.py  test_all_mcp_tools.py  test_large_response.py  test_logging_config.py  test_server.py  test_server_coverage.py  test_validate_config_script.py
tests/test_auth/: test_callback.py  test_oauth2.py  test_ssl_utils.py  test_tokens.py  test_tokens_coverage.py
tests/test_cache/: test_file_cache.py  test_session_cache.py
tests/test_client/: test_api.py  test_api_coverage.py  test_rate_limiter.py
tests/test_integration/: test_config.py  test_settings_edge_cases.py  test_settings_validators.py
tests/test_resources/: test_files_resource.py
tests/test_tools/: test_analytics_coverage.py  test_files_tools.py  test_modules.py  test_tool_edge_cases.py
tests/test_utils/: test_date_utils.py  test_response_utils.py
