[project]
name = "worksection-mcp"
version = "0.1.0"
description = "Multi-tenant MCP server for Worksection with comprehensive read-only tools for data access and reporting"
readme = "README.md"
authors = [
    { name = "Bohdan Potishuk", email = "dragon@noctilucence.io" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["mcp", "worksection", "fastmcp", "api", "project-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cryptography>=42.0.0",
    "aiosqlite>=0.20.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    # Document parsing
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "respx>=0.21.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
worksection-mcp = "worksection_mcp:main"

[project.urls]
Homepage = "https://github.com/your-org/worksection-mcp"
Documentation = "https://github.com/your-org/worksection-mcp#readme"
Repository = "https://github.com/your-org/worksection-mcp"
Issues = "https://github.com/your-org/worksection-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worksection_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=worksection_mcp --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
