[project]
name = "worksection-mcp"
version = "0.5.0"
description = "Multi-tenant MCP server for Worksection with comprehensive read-only tools for data access and reporting"
readme = "README.md"
authors = [
    { name = "Bohdan Potishuk", email = "dragon@noctilucence.io" }
]
license = { file = "LICENSE" }
requires-python = ">=3.14"
keywords = ["mcp", "worksection", "fastmcp", "api", "project-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastmcp>=3.0.0,<4",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "cryptography>=46.0.5",
    "aiosqlite>=0.22.1",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.1",
    # Document parsing
    "python-docx>=1.2.0",
    "openpyxl>=3.1.5",
    "python-pptx>=1.0.2",
    "pypdf>=6.7.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.2",
    "mypy>=1.19.1",
    "pyright>=1.1.408",
]

[project.scripts]
worksection-mcp = "worksection_mcp:main"

[project.urls]
Homepage = "https://github.com/pbv7/worksection-mcp"
Documentation = "https://github.com/pbv7/worksection-mcp#readme"
Repository = "https://github.com/pbv7/worksection-mcp"
Issues = "https://github.com/pbv7/worksection-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worksection_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=worksection_mcp --cov-report=term-missing"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT", "SIM", "RUF", "S", "T20", "DTZ", "ARG", "PERF", "ASYNC", "PTH", "RET"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
